--- a/config/locales/nb.yml
+++ b/config/locales/nb.yml
@@ -9,6 +9,7 @@ nb:
   new: "Ny"
   new_model: "Ny %{model}"
   participants: "Påmeldte"
+  enrollment_window: "Påmeldingsvindu"
   replies:
     index:
       participants: "Påmeldte"
@@ -17,9 +18,9 @@ nb:
     replies:
       no_replies: "Ingen registrerte enda."
       delete_chosen: "Slett valgte"
-
   dashboard:
     index:
+      dashboard: "Dashboard"
       last_replies: "Siste påmeldte"
       last_events: "Siste påmeldinger"
   events:
