Fixed events active scope, some localization added, fixed seeds, added confirmation on mass deletion of replies, added example files for database.yml and deploy.rb

--- a/config/locales/nb.yml
+++ b/config/locales/nb.yml
@@ -29,7 +29,8 @@ nb:
   events:
     edit:
       no_fields: "Det er ikke laget noen felt enda."
-
+    replies:
+      delete_chosen: "Slett valgte"
   views:
       pagination:
         previous: "«"
